--- a/templates/requisition_details.html
+++ b/templates/requisition_details.html
@@ -74,7 +74,7 @@
                     <div class="mb-3">
                         <label for="boq-mapping" class="form-label">BOQ Mapping (QS)</label>
                         <textarea id="boq-mapping" class="form-control" rows="4"></textarea>
-                        <button class="btn btn-sm btn-outline-primary mt-2 save-mr-details-btn" data-field="boq_mapping">Save BOQ</button>
+                        <button class="btn btn-sm btn-outline-primary mt-2 save-mr-details-btn" data-field="boq_mapping">Save BOQ Mapping</button>
                     </div>
                     {% endif %}
                 </div>
