--- a/templates/material_requisition_form.html
+++ b/templates/material_requisition_form.html
@@ -81,11 +81,15 @@
             </div>
 
             <div class="mt-4 text-end">
-                <button type="button" class="btn btn-secondary btn-lg" id="draft-btn">Save as Draft</button>
-                <button type="submit" class="btn btn-primary btn-lg" id="submit-btn">
+                <button type="button" class="btn btn-primary btn-lg" id="draft-btn">
+                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="display: none;"></span>
+                    <!-- Save as Draft -->
+                     Submit Request
+                </button>
+                <!-- <button type="submit" class="btn btn-primary btn-lg" id="submit-btn">
                     <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="display: none;"></span>
                     Submit Request
-                </button>
+                </button> -->
             </div>
         </form>
     </div>
