--- a/templates/receive_mr.html
+++ b/templates/receive_mr.html
@@ -171,6 +171,7 @@ document.addEventListener('DOMContentLoaded', function () {
                     <dt class="col-sm-5">Material Type</dt><dd class="col-sm-7">${details.material_type}</dd>
                     <dt class="col-sm-5">Supplier</dt><dd class="col-sm-7">${details.supplier}</dd>
                     <dt class="col-sm-5">LPO Number</dt><dd class="col-sm-7">${details.lpo_number}</dd>
+                    <dt class="col-sm-5">Tech Specs</dt><dd class="col-sm-7">${details.technical_spec}</dd>
                 </dl>
                 <hr class="my-2">
                 <h6 class="mb-2">Materials & Quantity</h6>
