--- a/templates/base.html
+++ b/templates/base.html
@@ -162,7 +162,7 @@
                  </h6>
                  <ul class="nav flex-column mb-2">
                     {% if is_privileged or 'Procurement' in user_roles %}
-                        <li class="nav-item"><a class="nav-link" href="/procurement/material-requisitions-delivered"><i class="bi bi-cart-check me-2"></i> Delivered MR</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/procurement/material-requisitions-delivered"><i class="bi bi-cart-check me-2"></i> All MRs</a></li>
                      {% endif %}
                      {% if is_privileged or 'Foreman/Duty Officer' in user_roles %}
                         <li class="nav-item">
@@ -327,7 +327,7 @@
                  </h6>
                  <ul class="nav flex-column mb-2">
                     {% if is_privileged or 'Procurement' in user_roles %}
-                        <li class="nav-item"><a class="nav-link" href="/procurement/material-requisitions-delivered"><i class="bi bi-cart-check me-2"></i> Delivered MR</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/procurement/material-requisitions-delivered"><i class="bi bi-cart-check me-2"></i> All MRs</a></li>
                      {% endif %}
                      {% if is_privileged or 'Foreman/Duty Officer' in user_roles %}
                     <li class="nav-item">
