--- a/templates/job_card_tracking.html
+++ b/templates/job_card_tracking.html
@@ -51,7 +51,7 @@
     </div>
 </div>
 {% else %}
-<div class="alert alert-info">No job cards found. Please create one using Form A.</div>
+<div class="alert alert-info">No job cards found. Please create one using Create Job Card Link.</div>
 {% endfor %}
 </div>
 {% endblock %}
