--- a/templates/material_requisition_form.html
+++ b/templates/material_requisition_form.html
@@ -267,7 +267,7 @@
         }
 
         spinner.style.display = 'inline-block';
-        submitBtn.disabled = true;
+        //submitBtn.disabled = true;
         draftBtn.disabled = true;
 
         const formData = new FormData(form);
